# fox_robotic_gadget

./: README.md  output.csv
Camera_Calibration/: README.md
Camera_Calibration/CameraCalibration/: README.md
Camera_Calibration/CameraCalibration/MyCameraCali/: MyCameraCali.cpp
Camera_Calibration/CameraCalibration/MyCameraCali/ChessBoardPitcureConner/: 10.txt  12.txt  13.txt  15.txt  2.txt  4.txt  6.txt  8.txt  caliberation_result.txt  world_coordinate.txt
Camera_Calibration/GetChessBoardPicture/: README.md
Camera_Calibration/GetChessBoardPicture/MyCameraCali/: MyCameraCali.cpp  MyCameraCali.vcxproj.filters
Camera_Calibration/GetChessboardCoordinate/: MyCameraCali.sln  README.md
Camera_Calibration/GetChessboardCoordinate/MyCameraCali/: MyCameraCali.cpp  MyCameraCali.vcxproj
Camera_Calibration/GetChessboardCoordinate/MyCameraCali/ChessBoardPitcureConner/: 0.txt  1.txt  11.txt  14.txt  3.txt  5.txt  7.txt  777.txt  9.txt
Camera_Calibration/OtherOneCameraCalibration/: CameraCalibration.sln  README.md
Camera_Calibration/OtherOneCameraCalibration/CameraCalibration/: CameraCalibration.cpp  CameraCalibration.vcxproj  CameraCalibration.vcxproj.filters
Camera_Calibration/OtherOneCameraCalibration/CameraCalibration/chessboardpicture/: calibdata.txt  caliberation_result.txt
Camera_Calibration/chessboard_rt0/: README.md  chessboard_rt.sln
Camera_Calibration/chessboard_rt0/chessboard_rt/: chessboard_rt.cpp  chessboard_rt.vcxproj  chessboard_rt.vcxproj.filters
Camera_Calibration/chessboard_rt0/chessboard_rt/Debug/: vc140.idb
Camera_Calibration/chessboard_rt0/chessboard_rt/chessboardpicture/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  (+16 more)
Opencv_MFC/: README.md
Opencv_MFC/Opencv_MFC_0.0/: README.md
Opencv_MFC/Opencv_MFC_0.0/TakePhoto/: TakePhoto.rc  TakePhoto.vcxproj  TakePhotoDlg.cpp  TakePhotoDlg.h  stdafx.cpp
Opencv_MFC/Opencv_MFC_0.1/: README.md
Opencv_MFC/Opencv_MFC_0.1/TakePhoto/: CvvImage.cpp  CvvImage.h  ReadMe.txt  TakePhoto.cpp  TakePhoto.rc  TakePhoto.vcxproj  TakePhoto.vcxproj.filters  TakePhotoDlg.cpp  TakePhotoDlg.h
Opencv_MFC/Opencv_MFC_0.2/: README.md  TakePhoto.sln
Opencv_MFC/Opencv_MFC_0.2/TakePhoto/: TakePhoto.h  TakePhoto.vcxproj  TakePhoto.vcxproj.filters  TakePhotoDlg.cpp  TakePhotoDlg.h  resource.h
gen_test_data/: gen_twolink_dyn_data.m
jacobe_ikine/: README.md  jacobe_ikine.sln
jacobe_ikine/jacobe_ikine/: jacobe_ikine.vcxproj  jacobe_ikine.vcxproj.filters  robotbox.cpp  robotbox.h  sample.cpp
manipulator_kine/: CMakeLists.txt  README.md
manipulator_kine/examples/: example_main.cpp
manipulator_kine/include/: robotbox.h
manipulator_kine/src/: robotbox.cpp
rob_dyn_by_sympybotics/: .gitignore  README.md  Two_link_dyn_iden.py  output.csv
rob_dyn_by_sympybotics/gen_test_data/: README.md
rob_dyn_by_sympybotics/sympybotics/: robotmodel.py
rob_dyn_control/: ModelManipulatorU.m  dymainc_identify_main.m  get_model_params.m  p560akb_dyn_hbmat.m  p560akb_dyn_hmat.m  readme.md
rob_dyn_control/admittance_control_dyn/: admittance_control_dyn.slx  compute_admittance.m  compute_admittance_cmd.m  dynamic_feedforward.m  p560akb_dyn_hbmat.m  p560akb_dyn_hmat.m  plot_rob_sim_traj.m  process_rob_model.m
rob_dyn_control/test_real_robot/: ModelManipulatorU.m  dyn_exciting_trajectory_main.m  dyn_identify_main.m  urlike_dyn_hbmat.m  urlike_dyn_hmat.m  urlike_get_model_params.m
rob_dyn_control/test_real_robot/data_traj/: 14s.txt  21s.txt  34s.txt  39s.txt  50s.txt  push_joint.txt
rob_dyn_sympybotics/: README.md  Two_link_dyn_iden.py  test_tor_q_dq_ddq.csv
rob_dyn_sympybotics/gen_test_data/: gen_twolink_dyn_data.m  iden_tor_q_dq_ddq.csv
rob_dyn_sympybotics/sympybotics/symcode/: subexprs.py
(+22 files in other folders)
